# heimdallr

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.ja.rst  README.md  README.rst  RELEASE.bzl  VERSION.bzl  build.star  config_debug.yaml  dashboard_config_debug.yaml  go.mod  go.sum  proxies.yaml  roles.yaml  rpc_permissions.yaml  rpcserver_config_debug.yaml
cmd/discovery-sidecar/: BUILD.bazel  main.go
cmd/github-release/: BUILD.bazel  main.go
cmd/heim-agent/: BUILD.bazel  main.go
cmd/heim-connector/: BUILD.bazel  main.go
cmd/heim-dashboard/: BUILD.bazel  main.go
cmd/heim-proxy/: BUILD.bazel  main.go
cmd/heim-rpcserver/: BUILD.bazel  main.go
cmd/heim-tunnel/: BUILD.bazel  main.go
cmd/heimctl/: BUILD.bazel  main.go
cmd/heimdallr-proxy/: BUILD.bazel  main.go
cmd/heimdallrcontroller/: BUILD.bazel  main.go
cmd/heimdev/: BUILD.bazel  main.go
cmd/lag-proxy/: BUILD.bazel  main.go
cmd/lag-rpcserver/: BUILD.bazel  main.go
cmd/lagctl/: BUILD.bazel  main.go
cmd/lagent/: BUILD.bazel  main.go
cmd/lagrangian-proxy/: BUILD.bazel  main.go
cmd/lcrawler/: BUILD.bazel  main.go
cmd/lpcli/: BUILD.bazel  main.go
cmd/lpctl/: BUILD.bazel  main.go
cmd/lproxy/: BUILD.bazel  main.go
cmd/release/: BUILD.bazel  main.go
container/: BUILD.bazel  repo.bzl  util.bzl
e2e/framework/: BUILD.bazel  agent.go  framework.go  framework_test.go  idp.go  junit.go  junit_test.go  proxy.go
e2e/framework/testdata/: junit.xml
e2e/scenario/: BUILD.bazel  dashboard_test.go  proxy_test.go
manifest/certmanager/: BUILD.bazel  cert-manager.yaml  dummy.go  embed.go
manifest/minio/: BUILD.bazel  dummy.go  embed.go  minio.yaml
operator/: BUILD.bazel  PROJECT  README.rst  main.go  webhook.crt  webhook.key  webhook_ca.crt  webhook_ca.key
operator/api/v1/: BUILD.bazel  backend_types.go  lagrangianproxy_types.go  proxy_types.go  role_types.go  rpcpermission_types.go  zz_generated.deepcopy.go
operator/bazeltesting/: BUILD.bazel  find.go
operator/cmd/etcdcontroller/: BUILD.bazel  main.go
operator/cmd/heimdallrcontroller/: BUILD.bazel  main.go
operator/cmd/lagproxycontroller/: BUILD.bazel  main.go
operator/cmd/proxycontroller/: BUILD.bazel  main.go
operator/config/: etcd.f110.dev_etcdclusters.yaml  proxy.f110.dev_backends.yaml  proxy.f110.dev_proxies.yaml  proxy.f110.dev_roles.yaml  proxy.f110.dev_rpcpermissions.yaml
operator/config/crd/: BUILD.bazel  etcd.f110.dev_etcdclusters.yaml  kustomization.yaml  proto.crd.yaml  proxy.f110.dev_backends.yaml  proxy.f110.dev_proxies.yaml  proxy.f110.dev_rolebindings.yaml  proxy.f110.dev_roles.yaml  proxy.f110.dev_rpcpermissions.yaml
operator/config/crd/bases/: etcd.f110.dev_etcdclusters.yaml  proxy.f110.dev_backends.yaml  proxy.f110.dev_lagrangianproxies.yaml  proxy.f110.dev_proxies.yaml  proxy.f110.dev_rolebindings.yaml  proxy.f110.dev_roles.yaml  proxy.f110.dev_rpcpermissions.yaml
operator/config/crd/patches/: cainjection_in_backends.yaml  cainjection_in_lagrangianproxies.yaml  cainjection_in_proxies.yaml  cainjection_in_roles.yaml  cainjection_in_rpcpermissions.yaml  webhook_in_backends.yaml  (+4 more)
operator/config/default/: kustomization.yaml
operator/config/manager/: BUILD.bazel  manager.yaml
operator/config/namespace/: BUILD.bazel  kustomization.yaml  namespace.yaml
operator/config/rbac/: BUILD.bazel  backend_editor_role.yaml  backend_viewer_role.yaml  basic_manager_role.yaml  basic_manager_role_binding.yaml  kustomization.yaml  lagrangianproxy_editor_role.yaml  lagrangianproxy_viewer_role.yaml  leader_election_role_binding.yaml  proxy_editor_role.yaml  proxy_viewer_role.yaml  role.yaml  role_binding.yaml  role_editor_role.yaml  role_viewer_role.yaml  rpcpermission_editor_role.yaml  rpcpermission_viewer_role.yaml  service_account.yaml
operator/config/samples/: backend.yaml  etcdcluster.yaml  ingress.yaml  ingressclass.yaml  proxy.yaml  proxy_v1_backend.yaml  proxy_v1_lagrangianproxy.yaml  proxy_v1_proxy.yaml  proxy_v1_role.yaml  proxy_v1_rpcpermission.yaml  rpcpermission.yaml
operator/config/webhook/: BUILD.bazel  kustomization.yaml  manifests.yaml  service.yaml
operator/controllers/: BUILD.bazel  backend_controller.go  config_reconciler.go  lagrangianproxy_controller.go  process.go  process_repository.go  proxy_controller.go  role_controller.go  suite_test.go
operator/deploy/: BUILD.bazel  all-in-one.yaml  kustomization.yaml
operator/deploy/base/: BUILD.bazel  kustomization.yaml
operator/deploy/dev/: BUILD.bazel  kustomization.yaml
operator/deploy/e2e/: BUILD.bazel  kustomization.yaml
operator/deploy/prod/: BUILD.bazel  kustomization.yaml
operator/e2e/: BUILD.bazel  README.rst  e2e_test.go  main.go
operator/e2e/data/: BUILD.bazel  cert-manager.certificates.yaml  cluster-issuer.yaml  dummy.go
operator/e2e/e2eutil/: BUILD.bazel  cluster.go  config.go  etcdcluster.go  fake.go  id.go  k8s.go  proxy.go
operator/e2e/framework/: BUILD.bazel  factory.go  framework.go
operator/e2e/test/: BUILD.bazel  etcd-controller.go  etcd-controller_test.go  main_test.go  proxy-controller.go  proxy-controller_test.go  util.go
operator/hack/: BUILD.bazel  boilerplate.go.txt
operator/hack/manifest-finalizer/: BUILD.bazel  def.bzl  main.go
operator/pkg/api/: BUILD.bazel
operator/pkg/bazeltesting/: BUILD.bazel
operator/pkg/controllers/: BUILD.bazel  backend_controller.go  config_converter.go  config_converter_test.go  controller_base.go  etcd_cluster.go  etcd_cluster_test.go  etcd_controller.go  etcd_controller_test.go  github_controller.go  github_controller_test.go  helper.go  ingress_controller.go  ingress_controller_test.go  main_test.go  process.go  process_repository.go  proxy.go  proxy_controller.go  proxy_controller_test.go  proxy_test.go  rbac.go  role_controller.go  rpcpermission_controller.go  runner_test.go  suite_test.go  util_test.go
operator/pkg/metrics/: BUILD.bazel  metrics.go
operator/pkg/signals/: BUILD.bazel
operator/pkg/webhook/: BUILD.bazel  converter.go  server.go
operator/proto/: BUILD.bazel  certmanager.proto
(+999 files in other folders)
