load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//:RELEASE.bzl", "RELEASE_MESSAGE", "VERSION")
load("//container:repo.bzl", "CONTAINER_IMAGE_REPOSITORIES", "REGISTRY")
load("//container:util.bzl", "container_image")

pkg_tar(
    name = "bin_proxy",
    files = {
        "//cmd/heimdallr-proxy:linux": "/usr/local/bin/heimdallr-proxy",
    },
    mode = "0755",
)

container_image(
    name = "proxy",
    architecture = "amd64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimdallr-proxy"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["proxy"] + ":latest"],
    tars = [":bin_proxy"],
)

pkg_tar(
    name = "bin_rpcserver",
    files = {
        "//cmd/heim-rpcserver:linux": "/usr/local/bin/heim-rpcserver",
        "@grpc_health_probe//file": "/usr/local/bin/grpc_health_probe",
    },
    mode = "0755",
)

container_image(
    name = "rpcserver",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heim-rpcserver"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["rpcserver"] + ":latest"],
    tars = [":bin_rpcserver"],
)

pkg_tar(
    name = "bin_dashboard",
    files = {
        "//cmd/heim-dashboard:linux": "/usr/local/bin/heim-dashboard",
    },
    mode = "0755",
)

container_image(
    name = "dashboard",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heim-dashboard"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["dashboard"] + ":latest"],
    tars = [":bin_dashboard"],
)

pkg_tar(
    name = "bin_ctl",
    files = {
        "//cmd/heimctl:linux": "/usr/local/bin/heimctl",
    },
    mode = "0755",
)

container_image(
    name = "ctl",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimctl"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["ctl"] + ":latest"],
    tars = [":bin_ctl"],
)

pkg_tar(
    name = "bin_operator",
    files = {
        "//cmd/heimdallrcontroller:linux": "/usr/local/bin/heimdallrcontroller",
    },
    mode = "0755",
)

container_image(
    name = "operator",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimdallrcontroller"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["operator"] + ":latest"],
    tars = [":bin_operator"],
)

pkg_tar(
    name = "bin_sidecar",
    files = {
        "//cmd/discovery-sidecar:linux": "/usr/local/bin/discovery-sidecar",
    },
    mode = "0755",
)

container_image(
    name = "sidecar",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/discovery-sidecar"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["sidecar"] + ":latest"],
    tars = [":bin_sidecar"],
)

sh_binary(
    name = "tag_proxy",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["proxy"],
        "--sha256",
        "$(location //container:proxy.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:proxy.digest",
    ],
)

sh_binary(
    name = "tag_rpcserver",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["rpcserver"],
        "--sha256",
        "$(location //container:rpcserver.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:rpcserver.digest",
    ],
)

sh_binary(
    name = "tag_dashboard",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["dashboard"],
        "--sha256",
        "$(location //container:dashboard.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:dashboard.digest",
    ],
)

sh_binary(
    name = "tag_ctl",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["ctl"],
        "--sha256",
        "$(location //container:ctl.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:ctl.digest",
    ],
)

sh_binary(
    name = "tag_operator",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["operator"],
        "--sha256",
        "$(location //container:operator.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        ":operator.digest",
    ],
)

sh_binary(
    name = "tag_sidecar",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["sidecar"],
        "--sha256",
        "$(location //container:sidecar.digest)",
        "--tag",
        VERSION,
        "--override",
    ],
    data = [":sidecar.digest"],
)
