load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//:RELEASE.bzl", "RELEASE_MESSAGE", "VERSION")
load("//container:repo.bzl", "CONTAINER_IMAGE_REPOSITORIES", "REGISTRY")
load("//container:util.bzl", "container_image")

pkg_tar(
    name = "bin_proxy_amd64",
    files = {
        "//cmd/heimdallr-proxy:linux_amd64": "/usr/local/bin/heimdallr-proxy",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_proxy_arm64",
    files = {
        "//cmd/heimdallr-proxy:linux_arm64": "/usr/local/bin/heimdallr-proxy",
    },
    mode = "0755",
)

container_image(
    name = "proxy",
    amd64_tar = ":bin_proxy_amd64",
    arm64_tar = ":bin_proxy_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimdallr-proxy"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["proxy"] + ":latest"],
)

pkg_tar(
    name = "bin_rpcserver_amd64",
    files = {
        "//cmd/heim-rpcserver:linux_amd64": "/usr/local/bin/heim-rpcserver",
        "@grpc_health_probe_amd64//file": "/usr/local/bin/grpc_health_probe",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_rpcserver_arm64",
    files = {
        "//cmd/heim-rpcserver:linux_arm64": "/usr/local/bin/heim-rpcserver",
        "@grpc_health_probe_arm64//file": "/usr/local/bin/grpc_health_probe",
    },
    mode = "0755",
)

container_image(
    name = "rpcserver",
    amd64_tar = ":bin_rpcserver_amd64",
    arm64_tar = ":bin_rpcserver_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heim-rpcserver"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["rpcserver"] + ":latest"],
)

pkg_tar(
    name = "bin_dashboard_amd64",
    files = {
        "//cmd/heim-dashboard:linux_amd64": "/usr/local/bin/heim-dashboard",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_dashboard_arm64",
    files = {
        "//cmd/heim-dashboard:linux_arm64": "/usr/local/bin/heim-dashboard",
    },
    mode = "0755",
)

container_image(
    name = "dashboard",
    amd64_tar = ":bin_dashboard_amd64",
    arm64_tar = ":bin_dashboard_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heim-dashboard"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["dashboard"] + ":latest"],
)

pkg_tar(
    name = "bin_ctl_amd64",
    files = {
        "//cmd/heimctl:linux_amd64": "/usr/local/bin/heimctl",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_ctl_arm64",
    files = {
        "//cmd/heimctl:linux_arm64": "/usr/local/bin/heimctl",
    },
    mode = "0755",
)

container_image(
    name = "ctl",
    amd64_tar = ":bin_ctl_amd64",
    arm64_tar = ":bin_ctl_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimctl"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["ctl"] + ":latest"],
)

pkg_tar(
    name = "bin_operator_amd64",
    files = {
        "//cmd/heimdallrcontroller:linux_amd64": "/usr/local/bin/heimdallrcontroller",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_operator_arm64",
    files = {
        "//cmd/heimdallrcontroller:linux_arm64": "/usr/local/bin/heimdallrcontroller",
    },
    mode = "0755",
)

container_image(
    name = "operator",
    amd64_tar = ":bin_operator_amd64",
    arm64_tar = ":bin_operator_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/heimdallrcontroller"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["operator"] + ":latest"],
)

pkg_tar(
    name = "bin_sidecar_amd64",
    files = {
        "//cmd/discovery-sidecar:linux_amd64": "/usr/local/bin/discovery-sidecar",
    },
    mode = "0755",
)

pkg_tar(
    name = "bin_sidecar_arm64",
    files = {
        "//cmd/discovery-sidecar:linux_arm64": "/usr/local/bin/discovery-sidecar",
    },
    mode = "0755",
)

container_image(
    name = "sidecar",
    amd64_tar = ":bin_sidecar_amd64",
    arm64_tar = ":bin_sidecar_arm64",
    base = "@com_google_distroless_base",
    entrypoint = ["/usr/local/bin/discovery-sidecar"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/f110/heimdallr",
    },
    repotags = [CONTAINER_IMAGE_REPOSITORIES["sidecar"] + ":latest"],
)

sh_binary(
    name = "tag_proxy",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["proxy"],
        "--sha256",
        "$(location //container:proxy.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:proxy.digest",
    ],
)

sh_binary(
    name = "tag_rpcserver",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["rpcserver"],
        "--sha256",
        "$(location //container:rpcserver.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:rpcserver.digest",
    ],
)

sh_binary(
    name = "tag_dashboard",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["dashboard"],
        "--sha256",
        "$(location //container:dashboard.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:dashboard.digest",
    ],
)

sh_binary(
    name = "tag_ctl",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["ctl"],
        "--sha256",
        "$(location //container:ctl.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        "//container:ctl.digest",
    ],
)

sh_binary(
    name = "tag_operator",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["operator"],
        "--sha256",
        "$(location //container:operator.digest)",
        "--tag",
        VERSION,
    ],
    data = [
        ":operator.digest",
    ],
)

sh_binary(
    name = "tag_sidecar",
    srcs = ["//cmd/release"],
    args = [
        "container",
        "--repository",
        CONTAINER_IMAGE_REPOSITORIES["sidecar"],
        "--sha256",
        "$(location //container:sidecar.digest)",
        "--tag",
        VERSION,
        "--override",
    ],
    data = [":sidecar.digest"],
)
