sh_binary(
    name = "run",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "run-operator",
        "--kind=$(location @kind//:file)",
        "--manifest=$(location //operator/deploy/dev:all-in-one)",
        "--controller-image=$(location //container:image_operator.tar)",
        "--sidecar-image=$(location //container:image_sidecar.tar)",
    ],
    data = [
        "//container:image_operator.tar",
        "//container:image_sidecar.tar",
        "//operator/deploy/dev:all-in-one",
        "@kind//:file",
    ],
)

load("//:RELEASE.bzl", "VERSION")

sh_binary(
    name = "load",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "load",
        "--kind=$(location @kind//:file)",
        "--images=quay.io/f110/heimdallr-discovery-sidecar:" + VERSION + "=$(location //container:image_sidecar.tar)",
    ],
    data = [
        "//container:image_sidecar.tar",
        "@kind//:file",
    ],
)

sh_binary(
    name = "log",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "log-operator",
        "--kind=$(location @kind//:file)",
    ],
    data = [
        "@kind//:file",
    ],
)
