load("//:RELEASE.bzl", "VERSION")

sh_binary(
    name = "run",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "run-operator",
        "--kind=$(location @kind//:file)",
        "--manifest=$(location //operator/deploy/dev:all-in-one)",
        "--controller-image=$(location //container:operator.amd64_tar)",
        "--sidecar-image=$(location //container:sidecar.amd64_tar)",
    ],
    data = [
        "//container:operator.amd64_tar",
        "//container:sidecar.amd64_tar",
        "//operator/deploy/dev:all-in-one",
        "@kind//:file",
    ],
)

sh_binary(
    name = "load",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "load",
        "--kind=$(location @kind//:file)",
        "--images=ghcr.io/f110/heimdallr/discovery-sidecar:" + VERSION + "=$(location //container:sidecar.amd64_tar)",
    ],
    data = [
        "//container:sidecar.amd64_tar",
        "@kind//:file",
    ],
)

sh_binary(
    name = "log",
    srcs = ["//cmd/heimdev"],
    args = [
        "cluster",
        "log-operator",
        "--kind=$(location @kind//:file)",
    ],
    data = [
        "@kind//:file",
    ],
)
