load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_binary(
    name = "discovery-sidecar",
    embed = [":discovery-sidecar_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "discovery-sidecar_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/discovery-sidecar",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/discovery",
        "//pkg/logger",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary_for_container(
    embed = [":discovery-sidecar_lib"],
    visibility = ["//visibility:public"],
)
