load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "github-release_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/github-release",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/google/go-github/v32/github",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/oauth2",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary(
    name = "github-release",
    embed = [":github-release_lib"],
    visibility = ["//visibility:public"],
)
