load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-agent_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-agent",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert",
        "//pkg/config/configv2",
        "//pkg/connector",
        "//pkg/logger",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
        "//vendor/software.sslmate.com/src/go-pkcs12",
    ],
)

go_binary(
    name = "heim-agent",
    embed = [":heim-agent_lib"],
    visibility = ["//visibility:public"],
)

load("//build/rules/go:util.bzl", "multiplatform_go_binary")
load("//:RELEASE.bzl", "PLATFORMS")

multiplatform_go_binary(
    embed = [":heim-agent_lib"],
    name_prefix = "heim-agent",
    platforms = PLATFORMS,
    visibility = ["//visibility:public"],
)
