load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-connector_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-connector",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert",
        "//pkg/config/configv2",
        "//pkg/connector",
        "//pkg/logger",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
        "//vendor/go.f110.dev/xerrors",
        "//vendor/software.sslmate.com/src/go-pkcs12",
    ],
)

go_binary(
    name = "heim-connector",
    embed = [":heim-connector_lib"],
    visibility = ["//visibility:public"],
)

load("//build/rules/go:util.bzl", "multiplatform_go_binary")
load("//:RELEASE.bzl", "PLATFORMS")

multiplatform_go_binary(
    embed = [":heim-connector_lib"],
    name_prefix = "heim-connector",
    platforms = PLATFORMS,
    visibility = ["//visibility:public"],
)
