load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//:RELEASE.bzl", "PLATFORMS")
load("//build/rules/go:util.bzl", "multiplatform_go_binary")

go_library(
    name = "heim-connector_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-connector",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cert",
        "//pkg/config/configv2",
        "//pkg/connector",
        "//pkg/logger",
        "//pkg/version",
        "@com_github_spf13_pflag//:pflag",
        "@com_sslmate_software_src_go_pkcs12//:go-pkcs12",
        "@dev_f110_go_xerrors//:xerrors",
    ],
)

go_binary(
    name = "heim-connector",
    embed = [":heim-connector_lib"],
    visibility = ["//visibility:public"],
)

multiplatform_go_binary(
    embed = [":heim-connector_lib"],
    name_prefix = "heim-connector",
    platforms = PLATFORMS,
    visibility = ["//visibility:public"],
)
