load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-dashboard_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-dashboard",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/dashboard",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary(
    name = "heim-dashboard",
    embed = [":heim-dashboard_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "linux",
    embed = [":heim-dashboard_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
