load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_library(
    name = "heim-dashboard_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-dashboard",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/dashboard",
        "//pkg/version",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "heim-dashboard",
    embed = [":heim-dashboard_lib"],
    visibility = ["//visibility:public"],
)

go_binary_for_container(
    embed = [":heim-dashboard_lib"],
    visibility = ["//visibility:public"],
)
