load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-proxy_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/auth/token",
        "//pkg/authproxy",
        "//pkg/config/userconfig",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary(
    name = "heim-proxy",
    embed = [":heim-proxy_lib"],
    visibility = ["//visibility:public"],
)

load("//build/rules/go:util.bzl", "multiplatform_go_binary")
load("//:RELEASE.bzl", "PLATFORMS")

multiplatform_go_binary(
    embed = [":heim-proxy_lib"],
    name_prefix = "heim-proxy",
    platforms = PLATFORMS,
    visibility = ["//visibility:public"],
)
