load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-rpcserver_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-rpcserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/rpcserver",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
        "//vendor/golang.org/x/xerrors",
    ],
)

go_binary(
    name = "heim-rpcserver",
    embed = [":heim-rpcserver_lib"],
    visibility = ["//visibility:public"],
)
