load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_library(
    name = "heim-rpcserver_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-rpcserver",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/rpcserver",
        "//pkg/version",
        "//vendor/github.com/spf13/pflag",
    ],
)

go_binary(
    name = "heim-rpcserver",
    embed = [":heim-rpcserver_lib"],
    visibility = ["//visibility:public"],
)

go_binary_for_container(
    embed = [":heim-rpcserver_lib"],
    visibility = ["//visibility:public"],
)
