load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heim-tunnel_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heim-tunnel",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd",
        "//pkg/cmd/tunnel",
    ],
)

go_binary(
    name = "heim-tunnel",
    embed = [":heim-tunnel_lib"],
    visibility = ["//visibility:public"],
)

load("//build/rules/go:util.bzl", "multiplatform_go_binary")
load("//:RELEASE.bzl", "PLATFORMS")

multiplatform_go_binary(
    embed = [":heim-tunnel_lib"],
    name_prefix = "heim-tunnel",
    platforms = PLATFORMS,
    visibility = ["//visibility:public"],
)
