load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_library(
    name = "heimctl_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heimctl",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd",
        "//pkg/cmd/heimctl",
    ],
)

go_binary(
    name = "heimctl",
    embed = [":heimctl_lib"],
    visibility = ["//visibility:public"],
)

go_binary_for_container(
    embed = [":heimctl_lib"],
    visibility = ["//visibility:public"],
)
