load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_library(
    name = "heimdallr-proxy_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heimdallr-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd/reverseproxy",
        "//pkg/version",
        "@com_github_spf13_pflag//:pflag",
    ],
)

go_binary(
    name = "heimdallr-proxy",
    embed = [":heimdallr-proxy_lib"],
    visibility = ["//visibility:public"],
)

go_binary_for_container(
    embed = [":heimdallr-proxy_lib"],
    visibility = ["//visibility:public"],
)
