load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heimdallrcontroller_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heimdallrcontroller",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config/configv2",
        "//pkg/k8s/api/etcd",
        "//pkg/k8s/api/proxy",
        "//pkg/k8s/client/versioned",
        "//pkg/k8s/controllers",
        "//pkg/k8s/informers/externalversions",
        "//pkg/k8s/signals",
        "//pkg/k8s/webhook",
        "//pkg/logger",
        "//vendor/github.com/google/uuid",
        "//vendor/github.com/spf13/pflag",
        "//vendor/go.uber.org/zap",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:meta",
        "//vendor/k8s.io/client-go/informers",
        "//vendor/k8s.io/client-go/kubernetes",
        "//vendor/k8s.io/client-go/tools/clientcmd",
        "//vendor/k8s.io/client-go/tools/leaderelection",
        "//vendor/k8s.io/client-go/tools/leaderelection/resourcelock",
        "//vendor/k8s.io/klog/v2:klog",
    ],
)

go_binary(
    name = "heimdallrcontroller",
    embed = [":heimdallrcontroller_lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "linux",
    embed = [":heimdallrcontroller_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
