load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//build/rules/go:util.bzl", "go_binary_for_container")

go_library(
    name = "heimdallrcontroller_lib",
    srcs = ["main.go"],
    importpath = "go.f110.dev/heimdallr/cmd/heimdallrcontroller",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/cmd",
        "//pkg/cmd/operator",
        "//pkg/k8s/api/etcd",
        "//pkg/k8s/api/proxy",
    ],
)

go_binary(
    name = "heimdallrcontroller",
    embed = [":heimdallrcontroller_lib"],
    visibility = ["//visibility:public"],
)

go_binary_for_container(
    embed = [":heimdallrcontroller_lib"],
    visibility = ["//visibility:public"],
)
